Feat: added Serilog and First tests

--- a/src/TeamManager.Api/TeamManager.Api.csproj
+++ b/src/TeamManager.Api/TeamManager.Api.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\TeamManager.Infrastructure\TeamManager.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="TeamManager.Tests.Integration" />
+  </ItemGroup>
+
 </Project>
