--- a/src/TeamManager.Infrastructure/TeamManager.Infrastructure.csproj
+++ b/src/TeamManager.Infrastructure/TeamManager.Infrastructure.csproj
@@ -18,6 +18,11 @@
       <PackageReference Include="Humanizer" Version="2.14.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
+      <PackageReference Include="Serilog" Version="3.0.0-dev-01998" />
+      <PackageReference Include="Serilog.AspNetCore" Version="7.0.0-dev-00302" />
+      <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0-dev-10346" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00910" />
+      <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.3-dev-00262" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="6.5.0" />
@@ -25,6 +30,10 @@
 
     <ItemGroup>
       <Folder Include="Shared" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="TeamManager.Tests.Integration" />
     </ItemGroup>
 
 </Project>
