--- a/src/TeamManager.Api/appsettings.json
+++ b/src/TeamManager.Api/appsettings.json
@@ -5,6 +5,30 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq" ],
+    "WriteTo": [
+      { 
+        "Name": "Console", 
+        "Args": {
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
+        }
+      },
+      { 
+        "Name": "Seq", 
+        "Args": { 
+          "serverUrl": "http://localhost:5341"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
   "AllowedHosts": "*",
   "auth": {
     "issuer": "teamManager-issuer",
