--- a/src/TeamManager.Api/TeamManager.Api.csproj
+++ b/src/TeamManager.Api/TeamManager.Api.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -15,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TeamManager.Common.AspNet\TeamManager.Common.AspNet.csproj" />
     <ProjectReference Include="..\TeamManager.Infrastructure\TeamManager.Infrastructure.csproj" />
   </ItemGroup>
 
