--- a/src/TeamManager.Application/TeamManager.Application.csproj
+++ b/src/TeamManager.Application/TeamManager.Application.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\TeamManager.Common.AspNet\TeamManager.Common.AspNet.csproj" />
       <ProjectReference Include="..\TeamManager.Core\TeamManager.Core.csproj" />
     </ItemGroup>
 
