--- a/src/TeamManager.Infrastructure/TeamManager.Infrastructure.csproj
+++ b/src/TeamManager.Infrastructure/TeamManager.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\TeamManager.Application\TeamManager.Application.csproj" />
+      <ProjectReference Include="..\TeamManger.Common.Extensions\TeamManger.Common.Extensions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -23,9 +24,6 @@
       <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0-dev-10346" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00910" />
       <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.3-dev-00262" />
-      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-      <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
-      <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="6.5.0" />
     </ItemGroup>
 
     <ItemGroup>
