--- a/src/TeamManger.Common.Extensions/TeamManger.Common.Extensions.csproj
+++ b/src/TeamManger.Common.Extensions/TeamManger.Common.Extensions.csproj
@@ -7,6 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Serilog" Version="3.0.0" />
+      <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+      <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00910" />
+      <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.3-dev-00262" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="6.5.0" />
