Feat: added MediatR and refactored code

--- a/src/TeamManager.Application/TeamManager.Application.csproj
+++ b/src/TeamManager.Application/TeamManager.Application.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\TeamManager.Common.AspNet\TeamManager.Common.AspNet.csproj" />
+      <ProjectReference Include="..\TeamManager.Common.MediatR\TeamManager.Common.MediatR.csproj" />
       <ProjectReference Include="..\TeamManager.Core\TeamManager.Core.csproj" />
     </ItemGroup>
 
