--- a/src/TeamManager.Api/TeamManager.Api.csproj
+++ b/src/TeamManager.Api/TeamManager.Api.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TeamManager.Common.AspNet\TeamManager.Common.AspNet.csproj" />
+    <ProjectReference Include="..\TeamManager.Common.MediatR\TeamManager.Common.MediatR.csproj" />
     <ProjectReference Include="..\TeamManager.Infrastructure\TeamManager.Infrastructure.csproj" />
   </ItemGroup>
 
