--- a/src/TeamManager.Api/appsettings.json
+++ b/src/TeamManager.Api/appsettings.json
@@ -2,14 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
     }
   },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Information"
+        "Microsoft": "Information",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
       }
     },
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq" ],
