--- a/src/TeamManager.Core/TeamManager.Core.csproj
+++ b/src/TeamManager.Core/TeamManager.Core.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TeamManager.Common.Core\TeamManager.Common.Core.csproj" />
+    </ItemGroup>
+
 </Project>
