--- a/src/TeamManager.Common.MediatR/TeamManager.Common.MediatR.csproj
+++ b/src/TeamManager.Common.MediatR/TeamManager.Common.MediatR.csproj
@@ -7,8 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MediatR" Version="11.1.0" />
-      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+      <PackageReference Include="Mediator.Abstractions" Version="3.0.0-preview.6" />
+      <PackageReference Include="Mediator.SourceGenerator" Version="3.0.0-preview.6">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
