--- a/src/TeamManger.Common.Extensions/TeamManger.Common.Extensions.csproj
+++ b/src/TeamManger.Common.Extensions/TeamManger.Common.Extensions.csproj
@@ -7,6 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="7.0.0" />
+      <PackageReference Include="AspNetCore.HealthChecks.UI" Version="7.0.0" />
+      <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="7.0.0" />
       <PackageReference Include="Serilog" Version="3.0.0" />
       <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
       <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
@@ -16,5 +19,6 @@
       <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="6.5.0" />
     </ItemGroup>
+
 
 </Project>
