--- a/src/TeamManger.Common.Extensions/TeamManger.Common.Extensions.csproj
+++ b/src/TeamManger.Common.Extensions/TeamManger.Common.Extensions.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="7.0.0" />
       <PackageReference Include="AspNetCore.HealthChecks.UI" Version="7.0.0" />
       <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="7.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
       <PackageReference Include="Serilog" Version="3.0.0" />
       <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
       <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
